# screenscraper

./: LICENSE  README.md
screenscraper/: client.py  game.py  pyproject.toml  region.py  user.py
tests/: test_client.py
