[project]
name = "screenscraper"
version = "0.1.0"
description = "A Python library to read from the screenscraper.fr API v2"
authors = [
  { name = "André Calero Valdez", email = "andrecalerovaldez@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["requests>=2.28"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"